# mesh

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
contracts/: README.md
contracts/script/: DeployMeshVault.s.sol  DeployPasskeyStack.s.sol  SetPasskeyVerifier.s.sol
contracts/src/: MeshVault.sol  MeshVaultFactory.sol  P256Verifier.sol  PasskeyVerifier.sol
contracts/src/interfaces/: IP256Verifier.sol  IPasskeyVerifier.sol
firmware/: Cargo.toml  README.md
firmware/node-a-signer/: Cargo.toml  partitions.csv
firmware/node-a-signer/src/: comm.rs  crypto.rs  main.rs  storage.rs  ui.rs
firmware/node-b-gateway/: Cargo.toml
firmware/node-b-gateway/src/: comm.rs  main.rs  serial.rs  state.rs  storage.rs
relayer/: Cargo.toml
relayer/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
relayer/frontend/src/: App.tsx  rpc.ts  styles.css  webauthn.ts
relayer/src/: abi.rs  db.rs  eth_rpc.rs  main.rs  rpc.rs  serial.rs
scripts/: e2e_nodeb_relayer_check.ps1  milestone3_e2e_checklist.md
