[package]
name = "mesh"
version = "0.1.0"
edition = "2024"

[dependencies]
# 임베디드에서도 돌아가는 직렬화 라이브러리
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# 해시 및 암호화 (no_std 지원)
chacha20poly1305 = { version = "0.10", default-features = false, features = [
    "alloc",
] }

[workspace]
members = [
    "common",
    "relayer",
    "firmware/node-a-signer",
    "firmware/node-b-gateway",
]
resolver = "2"
