[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
postcard = { version = "1.0", features = ["alloc"] }
tokio-serial = "5.4"
sha3 = "0.10"
hex = "0.4"
tokio-postgres = "0.7"
chrono = { version = "0.4", features = ["clock"] }
common = { path = "../common" }
