[package]
name = "node-b-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "0.14.0", features = ["esp32c3", "unstable"] }
esp-wifi = { version = "0.14.0", features = ["esp32c3", "wifi", "esp-now"] }
esp-backtrace = { version = "0.12.0", features = ["esp32c3", "panic-handler", "exception-handler", "print"], default-features = false }
embedded-io = "0.6"
postcard = { version = "1.0", default-features = false }
common = { path = "../../common" }
